--- a/SaveTheHumans2/MainWindow.xaml
+++ b/SaveTheHumans2/MainWindow.xaml
@@ -13,7 +13,7 @@
             </Grid>
         </ControlTemplate>
     </Window.Resources>
-    <Grid Height="669" Background="Black">
+    <Grid x:Name="grid" Height="669" Background="Black">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="140"/>
             <ColumnDefinition/>
@@ -25,27 +25,28 @@
             <RowDefinition Height="150"/>
 
         </Grid.RowDefinitions>
-        <Button x:Name="startButton" Content="Start!" HorizontalAlignment="Center" Grid.Row="1" VerticalAlignment="Center" Width="75" Click="startButton_Click"/>
+        <Button x:Name="startButton" Content="Start!" HorizontalAlignment="Center" Grid.Row="1" VerticalAlignment="Center" Width="75" Click="StartButton_Click"/>
         <StackPanel x:Name="enemyDemo" Grid.Row="1" Grid.Column="2" HorizontalAlignment="Center" VerticalAlignment="Center">
             <TextBox x:Name="avoidThese" Grid.Column="2" HorizontalAlignment="Center" Height="23" Grid.Row="1" TextWrapping="Wrap"
                 Text="Avoid These" VerticalAlignment="Center" Width="120" FontSize="18" Foreground="White" Background="Black"/>
-            <ContentControl x:Name="enemyIllustration" Content="ContentControl" Grid.Column="2" HorizontalAlignment="Center" Grid.Row="1" VerticalAlignment="Center" Template="{DynamicResource enemyTemplate}" Background="Black"/>
+            <ContentControl Content="ContentControl" Grid.Column="2" Grid.Row="1" 
+                            Template="{DynamicResource enemyTemplate}" Background="Black"/>
         </StackPanel>
-        <ProgressBar Grid.Column="1" Grid.Row="1" Height="20"/>
-        <Canvas x:Name="playArea" Grid.ColumnSpan="3">
+        <ProgressBar x:Name="progressBar" Grid.Column="1" Grid.Row="1" Height="20"/>
+        <Canvas x:Name="playArea" Grid.ColumnSpan="3" MouseMove="PlayArea_MouseMove" MouseLeave="PlayArea_MouseLeave">
             <Canvas.Background>
                 <LinearGradientBrush EndPoint="0.5,1" MappingMode="RelativeToBoundingBox" StartPoint="0.5,0">
                     <GradientStop Color="Black" Offset="0"/>
                     <GradientStop Color="#FF34B6AA" Offset="0.651"/>
                 </LinearGradientBrush>
             </Canvas.Background>
-            <StackPanel x:Name="human" Orientation="Vertical">
+            <StackPanel x:Name="human" Orientation="Vertical" MouseDown="Human_MouseDown">
                 <Ellipse Fill="White" Height="10" Width="10" Stroke="Black"/>
                 <Rectangle Fill="White" Height="25" Width="10" Stroke="Black"/>
             </StackPanel>
             <TextBlock x:Name="gameOverText" Canvas.Left="307" TextWrapping="Wrap" Text="Game Over" Canvas.Top="294" 
                        FontFamily="Arial" FontSize="72" FontStyle="Italic" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-            <Rectangle x:Name="target" Height="50" Canvas.Left="763" Stroke="Black" Canvas.Top="340" Width="50" RenderTransformOrigin="0.5,0.5">
+            <Rectangle x:Name="target" Height="50" Canvas.Left="763" Stroke="Black" Canvas.Top="340" Width="50" RenderTransformOrigin="0.5,0.5" MouseEnter="Target_MouseEnter">
                 <Rectangle.RenderTransform>
                     <TransformGroup>
                         <ScaleTransform/>
